--- a/intro.qmd
+++ b/intro.qmd
@@ -186,7 +186,7 @@ Finally, as the entirety of this dissertation is presented as a digital document
 [^39]: [](#ftnt_ref39) In T-A, she is called *mossue * once: “N’iert merveille se iert moussue” (v. 664). In T-B, she is called *mossue * twice and *polhue * once: “& de blanc poilh tote mossue / Noire & polhue ert la poitrine … N’ert mervelhe s’ele ert mossue” (vv.590-591 & 607 of T-B). In T-C, she is called*mossue * three times: “e de blanc peil tote mossue / Noire e mossue ert la peitrine … Ne fu merveille s’ert mossue” (vv.652-653 & 676 of T-C). She is only called*mossue * once in copies T-D and T-E: “N’ert merveille s’ele ert mossue” (v.666 of T-D); “N’iert par merveille si ert molsue” (v.666 of T-E). And although I cannot personally confirm the full verse as it is written in T-L due to my lack of access to the British Library, Dembowski notes the presence of*mossue* as a variation present in this copy as well (88n641).
 [^40]: [](#ftnt_ref40) On the issue of ‘clutter,’ Tufte argues, “‘Clutter’ in data graphics is evidence that your models don’t fit the data – and that you know it. You also know that your summary graphics cover up contrary data and depict dubious thresholds not present in the data set. Such cheats are obvious and easily detected, and damage your credibility” (Tufte 101). In traditional editions, ‘clutter’ is tucked away in the extensive paratextual notes — if such notes are included at all — that the interested reader must then decode in order to fully grasp both the source material and the editor’s interventions in order to craft well-founded arguments on the available textual data.
 [^41]: [](#ftnt_ref41) Cerquiglini also mentions Jean Rychner’s *Le Lai de Lanval *(1958) and Willem Noomen and Nico Van den Boogaard’s *Nouveau Recueil complet des fabliaux* (1983).
-[^42]: [](#ftnt_ref42) These copies have been given the labels A, B, C, D, E, L, F1, and F2. Alfred T. Baker is responsible for labeling the many versions and manuscript copies of the French Mary the Egyptian legend with their current sigla in his 1916 edition. Dembowski uses Baker’s system in his own 1977 edition, building on Baker’s labeling where appropriate. For example, T-F1 was unknown to Baker, and so, Dembowski is responsible for lettering the T fragments with superscript numbers. I follow Dembowski’s labels, and I provide more in-depth descriptions of each of the T copies in Appendix 1 of this dissertation.
+[^42]: [](#ftnt_ref42) These copies have been given the labels A, B, C, D, E, L, F^1^, and F^2^. Alfred T. Baker is responsible for labeling the many versions and manuscript copies of the French Mary the Egyptian legend with their current sigla in his 1916 edition. Dembowski uses Baker’s system in his own 1977 edition, building on Baker’s labeling where appropriate. For example, T-F^1^ was unknown to Baker, and so, Dembowski is responsible for lettering the T fragments with superscript numbers. I follow Dembowski’s labels, and I provide more in-depth descriptions of each of the T copies in Appendix 1 of this dissertation.
 [^43]: [](#ftnt_ref43) We do currently have several print editions of Version T of the Life of Mary the Egyptian, each selecting a different manuscript as their choice of base text. As mentioned above, Dembowski’s *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français *(1977) opts for copy T-A as its base text; Michèle Cruz-Sáenz offers an edition of copy T-B in her *The Life of Saint Mary of Egypt: An Edition and Study of the Medieval French and Spanish Verse Redactions* (1979). Prior to these 1970s editions, Baker published his critical edition — which is a composite of several T manuscripts — beside an edited transcript of manuscript copy T-C in an issue of the *Revue des langues romanes* (1916), and Matthew Cooke published his edition — “très inexactement transcrit” according to Dembowski (16) — of T-C in 1852.
 [^44]: [](#ftnt_ref44) Robertson’s article was written with the approval of Peter Dembowski who Robertson acknowledges from the outset, “I wish to thank Peter F. Dembowski for his critical reading of this article, and for his patient counsel throughout all my hagiographical researches” (“The Anglo-Norman Verse” 13).
 [^45]: [](#ftnt_ref45) Cerquiglini demonstrates the difficulty of reconstructing variants from such a critical apparatus in *Éloge de la variante* (1989). Armed with an editor’s encoded notes as well as pencil and paper, “Le lecteur patient, et indocile, mal satisfait de l'unicité qu'on lui offre, en retire quelques fragments, des lambeaux, des éclats, mais non pas cet autre du texte que l'apparat critique a pour fonction secrète d'éparpiller sourdement” (106).
