--- a/chapter2-2.qmd
+++ b/chapter2-2.qmd
@@ -4,7 +4,7 @@ title: "Chapter 2.2 An Approach to Editing Version T, Part 2"
 
 Appendix 2 of this dissertation offers more than 7,500 transcribed and encoded verses of Version T for the digital reader to consider, but to best serve the arguments of the dissertation, I have extracted Portraits 1 and 2 as case studies.[^133] Focusing on these passages and enhancing their presentation with visualization methods demonstrates more effectively the value of reading closely across the manuscript copies. As discussed in the Introduction to this dissertation (in sections ‘Why Version T?’ and ‘Cross-Copy Reading & The Difference It Makes’), most scholars rely on Dembowski’s print edition, which privileges copy T-A as its base text. This dependence has led to the relative neglect of the other T manuscripts and, consequently, to narrower interpretations of Version T. The digital presentation of the T portraits offered here in Part 2 of Chapter 2 instead promotes a cross-copy mode of reading, allowing readers to engage more readily with the full manuscript corpus — a practice I go on to model in Chapter 3. The remainder of this chapter details the technical methods used to render the T portraits digitally, including the design strategies employed to visualize textual variance across the copies. These visualizations make plain the forms of variation that print editions tend to obscure and advance the goal of accessibility as articulated in Chapter 1 (section 2. (Im)material and (In)human): accessibility understood not merely as the physical availability of source materials but as their intellectual legibility to a broader range of users.
 
-# Methods: Authoring in Quarto (The Portraits)
+## Methods: Authoring in Quarto (The Portraits)
 The visualizations of the T portraits presented here are made possible through the digital infrastructure on which this dissertation is built. This dissertation has been authored as a Quarto ‘book’ that outputs in HTML — a standard markup language (HyperText Markup Language) used to structure and display content on the web.[^134] I chose Quarto — a new open-source publishing system designed to help users produce dynamic content in a variety of formats — because of its interoperability and its lower barriers to entry for technical novices.[^135] While I have coded the edition of this dissertation in R with its primary output in HTML, Quarto allows scholars to author content in other languages — like Python or Julia — and to output their work in a variety of other formats (PDF, ePub, LaTeX, OpenDocument, Typist, etc.), allowing users to choose the conditions best suited for their expertise and research needs. I have similarly opted to use the text editors RStudio and Visual Studio Code (VS Code) to author this Quarto book because of both my own familiarity with these tools and the fact that they are all free, open-source, and widely-supported by a large community of users. Using this open, interoperable infrastructure directly supports the accessibility goals of this project. By relying on freely available tools, this project models a reproducible technical foundation that other humanities scholars can adapt to author digital editions of their own. In this way, accessibility in digital editing extends beyond the reader’s interface to include the editor’s process. Making the underlying infrastructure open, legible, and reproducible is part of the same commitment to transparency that guides the rest of this edition’s design.
 
 Rather than manipulating the underlying XML encoding of my transcriptions to present these portraits, I have taken advantage of the web development tools described above to mark up and style the portraits in two ways: first by simply presenting each of the T copies side-by-side on the page “The Portraits” and second by presenting them in parallel with added visual cues on the page “The Portraits (with Visualizations)”.
