Made link in footnote 279 in Appendix 1 live; added Conclusion to extract to markdown script

--- a/appendix1.qmd
+++ b/appendix1.qmd
@@ -212,7 +212,7 @@ The fragmentary yet invaluable witness of T-F^2^ underscores the significance of
 [^276]: [](#ftnt_ref276) On the topic of scribal hands in Add. 36614, Roach writes, “Several hands are involved: Chrétien’s *Perceval* was copied by a scribe who wrote in Francian with a Picard inmixture; the Continuations show at least two hands, the first of which is more definitely Picard; the intercalated *Bliocadran* is by a northeastern scribe; and finally a fourteenth-century hand has added in the last twelve folios a *Vita Mariae Aegyptiacae* in French verse.” (xx)
 [^277]: [](#ftnt_ref277) This dating is agreed upon by Micha (62) and Roach (xx) in their respective editions.
 [^278]: [](#ftnt_ref278) It seems Barrois may either be referred to as “Joseph” or “Paul”; the Ashburnham Library catalog of the auction of the Barrois manuscripts says the collection was “formed by M. Paul Barrois” (iii).
-[^279]: [](#ftnt_ref279) https://www.britishmuseum.org/collection/object/H_1901-1230-1
+[^279]: [](#ftnt_ref279) <https://www.britishmuseum.org/collection/object/H_1901-1230-1>
 [^280]: [](#ftnt_ref280) In addition to the 12 parchment folios, which the John Rylands record refers to as “vellum”, French 6 is also bound with 2 paper front pages and 24 end paper pages. The front pages are included in the digitization of this manuscript, but the end pages are not included in the digitization. These pages feature chainlines and unidentified watermarks.
 [^281]: [](#ftnt_ref281) Fawtier and Fawtier-Jones provide descriptions of each of these.
 [^282]: [](#ftnt_ref282) Dembowski refers to it as “un petit fragment anglo-norman de 162 vers correspondant aux 168 premiers vers de notre édition” (27).
