--- a/chapter3.qmd
+++ b/chapter3.qmd
@@ -1,22 +1,35 @@
 ---
 title: "Chapter 3. A Cross-Copy Close Reading of the T Portraits"
+format:
+  html:
+    include-after-body:
+      - text: |
+          <script src="figure-number-fix.js"></script>
+          <script>
+          // Configure this chapter's figure numbering
+          window.CHAPTER_CONFIG = {
+              TARGET_CHAPTER: 3  // What chapter number should THIS chapter's figures display as?
+              // Note: Cross-references to other chapters are handled by the global
+              // GLOBAL_FIGURE_MAPPING in figure-number-fix.js
+          };
+          </script>
 ---
 
 As discussed in the Introduction to this dissertation (sections ‘Why Version T?’ and ‘Cross-Copy Reading & the Difference It Makes’) previous scholars have reached contrasting conclusions about the meaning and audience of Version T of *La Vie de sainte Marie l’Égyptienne* as a result of their choice of source material. Simon Gaunt, for instance, frames the *Vie* as a text offering “men the double pleasure of enjoying the spectacle of Marie’s beautiful body and her sexual adventures, then witnessing the disintegration of her beauty, the just reward for her debauchery” (219). In Gaunt’s account, Version T primarily serves an unsympathetic male audience who may feel both sexual arousal and a *schadenfreude* infused with misogyny. Élisabeth Pinto-Mathieu more gently but similarly suggests the target audience would have been lay women “tentées par le siècle” (90) and in need of hagiographical texts to instruct and edify them. Whether for a male or female public, these readings each presume an audience that perceives womankind as both sexually threatening and sexually threatened and in need of severe correction. In that vein, Version T’s Mary the Egyptian is an extreme model of what-not-to-do and who-not-to-be *or else* — an interpretation only barely softened by the prologue’s acknowledgment that all may be saved by God no matter the gravity of their sins. Alternatively Emma Campbell and Duncan Robertson each resist such constrictive readings. As noted earlier (Introdcution, section ‘Why Version T?’), Campbell argues in favor of T’s queer affirmation of spiritual community in which Mary the Egyptian is not a threat to Christian brotherhood; rather than corrupt, she sets Christian example (164). Robertson’s body of work on Version T likewise challenges unsympathetic interpretations, writing of female saints in general: “These women are all autonomous, active figures — not victims or objects but subjects of religious experiences, who invoke the reader’s interest, concern, sympathy, admiration, empathy, and eventual imitation” (“‘Cume lur cumpaine et lur veisine’” 15-16). My own view aligns closely with Robertson’s: through a deliberate comingling of theological and emotional appeal, the T-poet invites audiences — male, female, or otherwise — to identify with Mary, to admire her, to desire her, and in so doing to find themselves within the Christian fold. While Gaunt and Pinto-Mathieu each based their readings of Version T on Dembowski’s print edition — and therefore draw their evidence almost exclusively from manuscript copy T-A — Campbell and Robertson grounded their interpretations in the wider manuscript corpus, a practice that productively complicates our understanding of Version T’s Mary the Egyptian. Reading across the full range of surviving witnesses compels us to test our assumptions about the text against its material evidence and to confront the diversity of interpretive possibilities the T corpus sustains. This chapter examines in particular the two T portraits as they appear across the available manuscript copies, using the digital edition and translations introduced in Chapter 2 to inform a comparative close reading that draws upon the full body of material evidence to reveal how different textual communities continually reshaped the figure of Mary the Egyptian.
 
 The close reading of this chapter is based on the T portraits as defined in Chapter 2 (Portrait 1 vv.157-216 and Portrait 2 vv.613-700). Yet even drawing such firm boundaries around these passages risks obscuring how the manuscripts themselves frame them. In the surviving copies of Version T, decorated initials guide readers’ eyes to new scenes or signal passages of heightened importance.[^143] Several manuscripts — T-C, T-D, and fragment T-F^1^ — introduce Portrait 1 with an accentuated ‘D,’ visually foregrounding the ensuing description of Mary’s beauty and her many alluring qualities:
 
-![Fig. 3.1: Oxford, Corpus Christi College, 232, f.38r, line 17/26 (T-C v.159). Detail.](images/Fig3.1T-C_f.38rDetail.png){width=100% fig-align="center"}
+![Oxford, Corpus Christi College, 232, f.38r, line 17/26 (T-C v.159). Detail.](images/Fig3.1T-C_f.38rDetail.png){#fig-3_1 width=100% fig-align="center"}
 
-![Fig. 3.2: Paris, BnF, Français 19525, f.16rb, line 27/32 (T-D v.155) Detail.](images/Fig3.2T-D_f.16rbDetail.png){width=100% fig-align="center"}
+![Paris, BnF, Français 19525, f.16rb, line 27/32 (T-D v.155) Detail.](images/Fig3.2T-D_f.16rbDetail.png){#fig-3_2 width=100% fig-align="center"}
 
-![Fig. 3.3: Manchester, John Rylands Library, French 6, f.8vb, line 35/41 (T-F^1^ v.155) Detail.](images/Fig3.3T-F1_f.8vbDetail.png){width=100% fig-align="center"}
+![Manchester, John Rylands Library, French 6, f.8vb, line 35/41 (T-F^1^ v.155) Detail.](images/Fig3.3T-F1_f.8vbDetail.png){#fig-3_3 width=100% fig-align="center"}
 
 Other witnesses, however, position decorative initials just before this moment.[^144] In T-A and T-E, the decorative initials mark Mary’s presence in Alexandria and the account of her ‘occupation’ there rather than the portrayal of her figure:
 
-![Fig. 3.4: Paris, BnF, Français 23112, f.335va, line 16/40 (T-A v.149) Detail.](images/Fig3.4T-A_f.335vaDetail.png){width=100% fig-align="center"}
+![Paris, BnF, Français 23112, f.335va, line 16/40 (T-A v.149) Detail.](images/Fig3.4T-A_f.335vaDetail.png){#fig-3_4 width=100% fig-align="center"}
 
-![Fig. 3.5: Paris, BnF Arsenal, 3516, f.114rb, line 9/50 (T-E v.109) Detail.](images/Fig3.5T-E_f.114rbcDetail.png){width=100% fig-align="center"}
+![Paris, BnF Arsenal, 3516, f.114rb, line 9/50 (T-E v.109) Detail.](images/Fig3.5T-E_f.114rbcDetail.png){#fig-3_5 width=100% fig-align="center"}
 
 This variation subtly shifts each copy’s interpretive focus. Whereas T-C, T-D, and T-F^1^ draw immediate attention to Mary’s physical appearance, T-A and T-E frame her through her actions, prompting readers to dwell first on her sin and its social consequences — men slaughtering one another and the wise of the city lamenting her wasted youth — before attending to her good side. Such visual cues could incline readers of T-A and T-E toward a harsher moral judgment of Mary, or at least to view her allure as secondary to her actions, while readers of T-C, T-D, and T-F^1^ might first encounter her with admiration and perhaps sympathy. The differing placements of these initials may seem minor, but they exemplify how the material features of the manuscripts — features often homogenized or omitted in traditional print editions — may quietly shape interpretation. Attending to these paratextual details reveals how scribes could redirect emphasis within copies of the ‘same’ text, subtly guiding a reader’s moral and emotional attention.
 
