--- a/figures.qmd
+++ b/figures.qmd
@@ -70,6 +70,12 @@ format:
 +---------------+---------------------------------------------------------------------------------------------------------------------+
 | @fig-3_5      | Paris, BnF Arsenal, 3516, f.114rb, line 9/50 (T-E v.109) Detail                                                     |
 +---------------+---------------------------------------------------------------------------------------------------------------------+
+| @fig-C_1      | Paris, BnF Arsenal, 3516, f.116rd, lines 21-22/50 (T-E vv.1021-1022). Detail                                        |
++---------------+---------------------------------------------------------------------------------------------------------------------+
+| @fig-C_2      | Paris, BnF Arsenal, 3516, f.117vc&d (T-E vv.1549-1578). Detail                                                      |
++---------------+---------------------------------------------------------------------------------------------------------------------+
+| @fig-C_3      | Oxford, Bodleian, Canonici Misc. 74, f.119r, line 10/29 (T-B vv.1179-1180). Detail                                  |
++---------------+---------------------------------------------------------------------------------------------------------------------+
 
 : {.hover tbl-colwidths="[25,75]"}
 
