Small edits (since Ogden's review on 11/7); Updated Conclusion text (editing still in progress)

--- a/appendix1.qmd
+++ b/appendix1.qmd
@@ -178,7 +178,7 @@ The fragmentary yet invaluable witness of T-F^2^ underscores the significance of
 [^242]: [](#ftnt_ref242) This prayer begins in the line immediately following the Life of Mary the Egyptian on f.344r with a parted blue and red initial “B” that is two lines high.
 [^243]: [](#ftnt_ref243) <https://archivesetmanuscrits.bnf.fr/ark:/12148/cc52450n>
 [^244]: [](#ftnt_ref244) In his edition, Dembowski says the language is “fortement picardisée” (25), but he does not elaborate with many linguistic details.
-[^245]: [](#ftnt_ref245) On his choice of base copy, Dembowski writes, “Ce choix est grandement simplifié du fait que, comme nous l’avons déjà vu, les mss. B et D donnent des versions très abrégés du récit et que les mss. E et L ont des lacunes considérables. Il ne nous reste donc que A et C. Vu que C est plus récent que A, vu que C a un nombre de leçons inférieures à A, vu que le scribe de A donne un texte très soigné, vu enfin que le texte de C est connu grâce à l’édition de Baker (sans mentionner celle de Cooke), le choix de A s’impose” (30).
+[^245]: [](#ftnt_ref245) On his choice of base copy, Dembowski writes, “Ce choix est grandement simplifié du fait que, comme nous l’avons déjà vu, les mss. *B* et *D* donnent des versions très abrégés du récit et que les mss. *E* et *L* ont des lacunes considérables. Il ne nous reste donc que *A* et *C*. Vu que *C* est plus récent que *A*, vu que *C* a un nombre de leçons inférieures à *A*, vu que le scribe de *A* donne un texte très soigné, vu enfin que le texte de *C* est connu grâce à l’édition de Baker (sans mentionner celle de Cooke), le choix de *A* s’impose” (30).
 [^246]: [](#ftnt_ref246) Campbell notes that the hands are all recognizable as thirteenth-century (236).
 [^247]: [](#ftnt_ref247) Cruz-Sáenz writes, “...its dialectal traits allow us to say it might have been written even in the late twelfth century. It is undoubtedly the oldest extant text of the poem” (23).
 [^248]: [](#ftnt_ref248) At 1,327 verses, B is the shortest among the full copies of Version T.
