--- a/appendix2-intro.qmd
+++ b/appendix2-intro.qmd
@@ -8,7 +8,7 @@ With the aim of enhancing both accessibility and transparency, in this appendix,
 For the T copies that have been digitized (T-A, T-D, T-E, T-F^1^, and T-F^2^), links to their digital surrogates are included at the top of each page. With the help of these digitizations, readers may consider my transcriptions and editing choices with greater scrutiny, but for the far more inaccessible T copies, most readers will simply have to trust my judgment. Regardless, this appendix offers a complementary resource, bridging the gap between modern reader and medieval manuscript.
 
 ## General Features
-The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript, and decorative initials appear in proportion to their size in the manuscript. Empty brackets (“[]”) indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks (“?”) have been added to represent missing characters.
+The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript, and decorative initials appear in proportion to their size in the manuscript. Empty brackets ('[]') indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks ('?') have been added to represent missing characters.
 
 ## Minimal
 The 'Minimal' column closely mirrors the manuscript’s original text while implementing minor regularizations for clarity — regularizations that do not require situation-specific choices. Thus the letters u/v and i/j are standardized, and proper names like *Marie* and *Deu* are capitalized. Initial and final letter separation is not represented. However, word spacing and punctuation in this column match the original manuscript. At this stage of the project, the only abbreviation marks represented throughout Appendix 2 are ampersands (&) — standing in for all 'et' symbols — and the scribal abbreviation for both ‘con’ and ‘com’ (ꝯ). This minimal level of intervention allows the text to remain as faithful as possible to its source while improving basic readability.
