--- a/chapter2.qmd
+++ b/chapter2.qmd
@@ -35,7 +35,7 @@ As digital editors, we can adopt the ethos of data visualization experts to enha
 In what follows, I explain how my own digital edition has been developed to support such clarity. This dissertation provides a text that is useable not only for close reading but also for computational analysis by providing TEI-compliant transcriptions that are both human and machine readable.[^103] The edition featured in Appendix 2 (and described here in Chapter 2, Part 1) stages editorial decisions explicitly, presenting a spectrum of intervention across parallel columns, while the edition and translations of the T portraits (provided in Chapter 2, Part 2) further extends the accessibility of T to non-specialists in Old French. These materials are not only intended to document textual variation, but to invite readers into deeper engagement with the full manuscript corpus of Version T — to read not in spite of variance, but through it.
 
 ## Methods: From Transcribing to Encoding (Appendix 2)
-In preparation for the digital edition begun in this dissertation — both the extracted portraits (featured in Chapter 2, Part 2) and the substantial material in Appendix 2 — extensive groundwork was necessary. As detailed in Appendix 1, I engaged deeply with the manuscripts of Version T, visiting both digital repositories and reading rooms to gather the data and images that inform every stage of the transcription and editing process.[^104] This approach has ensured that the digital edition presented in this dissertation is firmly grounded in the material witnesses of Version T. From my work with these manuscripts, I have managed to transcribe and encode all accessible copies of Version T, with the exception of the British Library manuscript T-L.[^105] These encoded transcriptions are now publicly available as XML files in the GitHub repository *marie-legyptienne*.[^106] In the more immediate future, these XML files will contribute to the ongoing *Lives of the Saints: The Medieval French Hagiography Project* — a digital humanities project, directed by my advisor Amy Ogden and sponsored by The Institute for Advanced Technology in the Humanities (IATH), with the aim of making “easily accessible the information that is currently known about medieval French hagiography and to make evident the substantial holes in that knowledge” (*Lives of the Saints*, “Introduction”).[^107] But also by making the XML files of my encoded transcriptions open access, it is my hope that they may prove useful to other interested scholars with research goals that I cannot anticipate — perhaps for the purpose of distant reading or OCR training.[^108] As discussed in Chapter 1 (section 3. Ephemeral and Error-prone), I follow Whearty’s model of sustainability not as permanence but as potential: by making my data, methods, and decisions publically available, I aim to offer future researchers the very kind of “raw materials” (*Digital Codicology* 211) that may yet be reworked and reimagined in ways I cannot now foresee. Openly offering these files and their complete version history also furthers the goal of enhancing the transparency of the editorial process, preventing the proliferation of both the errors and silent emendations that create the “crisis of authenticity” (*Digital Codicology* 228) addressed in Chapter 1. With the use of Git for version control, anyone can see the choices I have made throughout the development of these files and of this digital edition from start to finish.
+In preparation for the digital edition begun in this dissertation — both the extracted portraits (featured in Chapter 2, Part 2) and the substantial material in Appendix 2 — extensive groundwork was necessary. As detailed in Appendix 1, I engaged deeply with the manuscripts of Version T, visiting both digital repositories and reading rooms to gather the data and images that inform every stage of the transcription and editing process.[^104] This approach has ensured that the digital edition presented in this dissertation is firmly grounded in the material witnesses of Version T. From my work with these manuscripts, I have managed to transcribe and encode all accessible copies of Version T, with the exception of the British Library manuscript T-L.[^105] These encoded transcriptions are now publicly available as XML files in the GitHub repository *marie-legyptienne*.[^106] In the more immediate future, these XML files will contribute to the ongoing *Lives of the Saints: The Medieval French Hagiography Project* — a digital humanities project, directed by my advisor Amy V. Ogden and sponsored by The Institute for Advanced Technology in the Humanities (IATH), with the aim of making “easily accessible the information that is currently known about medieval French hagiography and to make evident the substantial holes in that knowledge” (*Lives of the Saints*, “Introduction”).[^107] But also by making the XML files of my encoded transcriptions open access, it is my hope that they may prove useful to other interested scholars with research goals that I cannot anticipate — perhaps for the purpose of distant reading or OCR training.[^108] As discussed in Chapter 1 (section 3. Ephemeral and Error-prone), I follow Whearty’s model of sustainability not as permanence but as potential: by making my data, methods, and decisions publically available, I aim to offer future researchers the very kind of “raw materials” (*Digital Codicology* 211) that may yet be reworked and reimagined in ways I cannot now foresee. Openly offering these files and their complete version history also furthers the goal of enhancing the transparency of the editorial process, preventing the proliferation of both the errors and silent emendations that create the “crisis of authenticity” (*Digital Codicology* 228) addressed in Chapter 1. With the use of Git for version control, anyone can see the choices I have made throughout the development of these files and of this digital edition from start to finish.
 
 Prior to diving into the XML encoding though, I first transcribed each manuscript of Version T — working from both the digitized images of the manuscripts and my own collected images — into a basic Google Sheet,[^109] with each verse occupying its own cell.[^110] This early stage served as a no-code method that organized the texts in a manipulatable, shareable format, and by adding color coding to this spreadsheet to highlight the major narrative scenes as they appear across the manuscript copies, I was able to quickly recognize key areas of interest and direct the focus of my subsequent research:
 
@@ -201,15 +201,15 @@ The visualizations of the T portraits presented here are made possible through t
 
 Rather than manipulating the underlying XML encoding of my transcriptions to present these portraits, I have taken advantage of the web development tools described above to mark up and style the portraits in two ways: first by simply presenting each of the T copies side-by-side on the page “The Portraits” and second by presenting them in parallel with added visual cues on the page “The Portraits (with Visualizations)”.
 
-The initial presentation mode (“The Portraits”) simply displays each of the T copies of the portraits side-by-side, with the ‘Extensive’ level of editorial intervention previously described in this chapter. On this page, no additional adjustments have been made to align these copies for easier cross-copy reading. Without closer inspection, the only readily apparent difference among these copies is their variant lengths, which may be observed by scrolling toward the bottom of the page. While this layout focuses the reader’s attention on the full passages most relevant to this dissertation, without any other added visual aids, recognizing the nuanced differences and meaningful consistencies across the T copies would require more deliberate study by the reader.
+The initial presentation mode (“The Portraits”) simply displays each of the T copies of the portraits side-by-side, with the ‘Extensive’ level of editorial intervention previously described in the first part of this chapter. On this page, no additional adjustments have been made to align these copies for easier cross-copy reading. Without closer inspection, the only readily apparent difference among these copies is their variant lengths, which may be observed by scrolling toward the bottom of the page. While this layout focuses the reader’s attention on the full passages most relevant to this dissertation, without any other added visual aids, recognizing the nuanced differences and meaningful consistencies across the T copies would require more deliberate study by the reader.
 
 Alternatively, on the page “The Portraits (with Visualizations),” the portraits are again laid out side-by-side, but spacing has been adjusted to put each copy in parallel, making it easier to track patterns and changes across the copies. Verses that are lacking from each copy are indicated with red-gradient blocking, while sequence changes made by the scribe are blocked in yellow. Unique features (either whole verses or key words) have been highlighted in green, and negated phrasing and color imagery — poetic features of the portraits to be explored in Chapter 3 — have been highlighted in blue and purple respectively.[^136] Adding the parallel layout alone makes it immediately easier to see the absences, alterations, and additions present in each copy, and the addition of colorized visual cues draws the reader’s attention to areas of interest for comparison right away, highlighting otherwise subtle variations in word choice, sequence, and descriptive emphasis. The addition of blue and purple highlighting to underscore the use of negation and color imagery across the copies is perhaps uniquely helpful in the context of these portraits, as these poetic features may not be as important to highlight throughout the rest of the narrative, but in this context, these color annotations aid my reader in seeing more clearly the arguments made during the close reading of Chapter 3. Overall, the added visual cues on this page help the reader to more intuitively process the complications added by each of the T copies that would otherwise be nearly impossible to visualize and interpret from carefully cross-referencing the editorial notes of a traditional print edition alone.[^137]
 
-Both presentation modes — the portraits with and without added visualizations — are enhanced by dynamic focus features, controlled through the CSS of this Quarto book, that affect the appearance of the text columns individually as the user hovers their cursor over them.[^138] When each text column is not actively moused over, the reader may see the Old French text — provided with the ‘Extensive’ level of editorial intervention — and when moused over, the English translations of the portraits of each T copy are revealed while the other text columns fade slightly. Offering the translations in this more dynamic way than one would typically find in the traditional facing-page layout of a print edition allows readers to more quickly toggle between the two languages without having to shift focus from one location on the page to another, maintaining focus on a single verse in both languages nearly simultaneously. Thus this dynamic styling addresses the inherent challenge of the human reader’s inability to read more than one thing at a time and encourages the modern reader to hold both languages in their mind as they read. Importantly, too, each English translation offered in this digital edition is unique to its copy, which further assists the modern reader in more immediately recognizing the variations present across the T copies even without extensive proficiency in Old French. This feature exemplifies, once again, the form of accessibility articulated in Chapter 1 (section 2. (Im)material and (In)human): accessibility as the rendering of materials intelligible to a wider range of readers. By providing a distinct translation for each manuscript copy, this digital format offers multiple points of entry for both established scholars and emerging learners of Old French.
+Both presentation modes — the portraits with and without added visualizations — are enhanced by dynamic focus features, controlled through the CSS of this Quarto book, that affect the appearance of the text columns individually as the user hovers their cursor over them.[^138] When each text column is not actively moused over, the reader sees the Old French text — provided with the ‘Extensive’ level of editorial intervention — and when moused over, the English translations of the portraits of each T copy are revealed while the other text columns fade slightly. Offering the translations in this more dynamic way than one would typically find in the traditional facing-page layout of a print edition allows readers to more quickly toggle between the two languages without having to shift focus from one location on the page to another, maintaining focus on a single verse in both languages nearly simultaneously. Thus this dynamic styling addresses the inherent challenge of the human reader’s inability to read more than one thing at a time and encourages the modern reader to hold both languages in their mind as they read. Importantly, too, each English translation offered in this digital edition is unique to its copy, which further assists the modern reader in more immediately recognizing the variations present across the T copies even without extensive proficiency in Old French. This feature exemplifies, once again, the form of accessibility articulated in Chapter 1 (section 2. (Im)material and (In)human): accessibility as the rendering of materials intelligible to a wider range of readers. By providing a distinct translation for each manuscript copy, this digital format offers multiple points of entry for both established scholars and emerging learners of Old French.
 
-In future iterations of this edition, I would like to enable readers to more easily compare individual whole copies with one another by adding more interactivity to the digital edition. With the current layout, it is not easy to compare copy T-A with copy T-E directly, for example, without opening each copy in separate browser windows.[^139] I would prefer a more dynamic layout that allows the digital reader to first choose which copies they would like to appear on the screen in parallel for closer inspection. Such a layout would allow readers to choose how complicated to make their own reading experience and would avoid prescribing any particular copy or hierarchy of copies to the reader as I have argued that all of the T copies are worthy of our attention.[^140] Regardless, the present digital edition of the T potraits, at the very least, spares the reader “the painful task of reconstituting” each copy from a list of variants and encourages a more careful cross-copy reading of Version T.[^141]
+In future iterations of this edition, I would like to enable readers to more easily compare individual whole copies with one another by adding more interactivity to the digital edition. With the current layout, it is not easy to compare copy T-A with copy T-E directly, for example, without opening each copy in separate browser windows.[^139] I would prefer a more dynamic layout that allows the digital reader to first choose which copies they would like to appear on the screen in parallel for closer inspection. Such a layout would allow readers to choose how complicated to make their own reading experience and would avoid prescribing any particular copy or hierarchy of copies to the reader as I have argued that all of the T copies are worthy of our attention.[^140] Regardless, the present digital edition of the T portraits, at the very least, spares the reader “the painful task of reconstituting” each copy from a list of variants and encourages a more careful cross-copy reading of Version T.[^141]
 
-My approach to these visualizations should not be considered objective. All color and pattern choices were applied manually and are intended to support my own close reading of the T portraits (Chapter 3). Stefan Jänicke and David Wrisley (2017), however, advocate for the use of computer-assisted analysis to help automate the study of *mouvance* at scale. Working with excerpts from a handful of copies of the *Chanson de Roland*, they employed statistical analysis to track variation not only at the verse-line level but also within individual lines — including changes in word order. To visualize this data, they propose the use of stream graphs, which offer a ‘meso-level’ view that balances computational analysis with the human reading experience. Notably, they identify *La Vie de sainte Marie l’Égyptienne* as a text particularly well suited to this method of analysis, especially for revealing patterns of textual reuse across versions. They do note, however, that the scale of the full French tradition of the *Vie* would pose technical challenges, such as the need for a large enough screen to accurately present such a massive visualization (ii113). Their study also highlights a major barrier to this kind of large-scale analysis: the scarcity of full digital transcriptions of medieval manuscript copies. “In the case of medieval French,” they observe, “we have only a few fully transcribed textual traditions [in] full” (ii107). This lack underscores the importance of producing and sharing more high-quality digital transcriptions like those produced for this dissertation (Appendix 2).[^142] And while large-scale computational models offer exciting possibilities for the future study of *mouvance*, meaningful inquiry does not depend on them. Small-scale, manually generated visualizations such as those presented here retain the nuance of human interpretation and invite readers to engage closely with the text itself. The visualizations I propose complement, rather than compete with, computational methods, demonstrating that the digital analysis of medieval writing need not be distant or impersonal to yield valuable insights.
+My approach to these visualizations should not be considered objective. All color and pattern choices were applied manually and are intended to support my own close reading of the T portraits (Chapter 3). Stefan Jänicke and David Wrisley (2017), however, advocate for the use of computer-assisted analysis to help automate the study of *mouvance* at scale. Working with excerpts from a handful of copies of the *Chanson de Roland*, they employed statistical analysis to track variation not only at the verse-line level but also within individual lines — including changes in word order. To visualize this data, they propose the use of stream graphs, which offer a ‘meso-level’ view that balances computational analysis with the human reading experience. Notably, they identify *La Vie de sainte Marie l’Égyptienne* as a corpus particularly well suited to this method of analysis, especially for revealing patterns of textual reuse across versions. They do note, however, that the scale of the full French tradition of the *Vie* would pose technical challenges, such as the need for a large enough screen to accurately present such a massive visualization (ii113). Their study also highlights a major barrier to this kind of large-scale analysis: the scarcity of full digital transcriptions of medieval manuscript copies. “In the case of medieval French,” they observe, “we have only a few fully transcribed textual traditions [in] full” (ii107). This lack underscores the importance of producing and sharing more high-quality digital transcriptions like those produced for this dissertation (Appendix 2).[^142] And while large-scale computational models offer exciting possibilities for the future study of *mouvance*, meaningful inquiry does not depend on them. Small-scale, manually generated visualizations such as those presented here retain the nuance of human interpretation and invite readers to engage closely with the text itself. The visualizations I propose complement, rather than compete with, computational methods, demonstrating that the digital analysis of medieval writing need not be distant or impersonal to yield valuable insights.
 
 
 [^94]: [](#ftnt_ref94) In their guide *On Editing Old French Texts* (1979), Foulet and Speer note that the reader of any Old French text should always bear in mind that “in all likelihood, what he is reading is not actually the author’s composition but the result of hundreds of editorial decisions” (xv), and they sympathize with the editor who has the difficult task of formulating hard rules when each text offers special cases requiring unique treatment, “Handling such problems as variants and emendations calls for informed but necessarily subjective judgments” (xv).
@@ -254,7 +254,7 @@ My approach to these visualizations should not be considered objective. All colo
 [^133]: [](#ftnt_ref133) Focusing just on these two passages still offers a substantial number of verses (726 in total) to consider. T-A offers 148 verses (60 in P1 and 88 in P2), T-B offers 132 (58 in P1 and 74 in P2), T-C and T-E each have 150 verses (60 in P1 and 90 in P2), and T-D offers 146 verses (58 in P1 and 88 in P2). Copy T-L has, of course, been excluded due to my lack of access to it, and the fragments have also been excluded as T-F^1^ offers only the first 10.5 verses of Portrait 1 and T-F^2^ does not offer any verses from either portrait. Ultimately though, it would be ideal to treat the full T corpus with the editing, translating, and styling attention I have paid to the T portraits here.
 [^134]: [](#ftnt_ref134) I have also styled the digital presentation of the book using CSS (Cascading Style Sheets) — a language used to control the visual appearance of HTML content, such as fonts, colors, spacing, and layout.
 [^135]: [](#ftnt_ref135) A similar, simpler alternative to Quarto is bookdown, which is an open-source R package — that is, a collection of prewritten functions and templates — built on top of R Markdown — a user-friendly document format that allows authors to combine narrative prose with chunks of executable R code in a single file. While bookdown allows users to create digital ‘books,’ it is far less interoperable than Quarto, requiring users to work exclusively in the programming language R.
-[^136]: [](#ftnt_ref136) The coloring and styling used for this page has been optimized for users with color blindness. For example, a red-blind user may have trouble distinguishing between the colors that have been used to annotate negated phrasing (blue) and color imagery (purple), but to address that difficulty, texture has been added to the blue negated phrasing annotations so that pattern rather than color may be relied upon to make this distinction clearer. Thoughtful design choices like these ensure both convenience for users without color blindness and genuine accessibility for users with it, allowing the edition’s visual cues to remain meaningful and legible to all sighted readers. While blind readers can access the full textual content of this dissertation through the use of a screenreader, more work is necessary to ensure that a screenreader would reconize and announce these color-based visualizations to the user, and future iterations of this project should take that design need into account. Accessibility here is both a technical and ethical priority.
+[^136]: [](#ftnt_ref136) The coloring and styling used for this page has been optimized for users with color blindness. For example, a red-blind user may have trouble distinguishing between the colors that have been used to annotate negated phrasing (blue) and color imagery (purple), but to address that difficulty, texture has been added to the blue negated phrasing annotations so that pattern rather than color may be relied upon to make this distinction clearer. Thoughtful design choices like these ensure both convenience for users without color blindness and genuine accessibility for users with it, allowing the edition’s visual cues to remain meaningful and legible to all sighted readers. While blind readers can access the full textual content of this dissertation through the use of a screenreader, more work is necessary to ensure that a screenreader would recognize and announce these color-based visualizations to the user, and future iterations of this project should take that design need into account. Accessibility here is both a technical and ethical priority.
 [^137]: [](#ftnt_ref137) Bryant argues that if digital editors want to present a fluid-text edition, they must consider “what can computers do for readers that books cannot” (146). Digital editions must be more than simply faster and more convenient (147); they must enable readers to *visualize* the revision process (148).
 [^138]: [](#ftnt_ref138) This effect is also applied to the text columns of Appendix 2, which appear to be in greater focus when hovered over by increasing the text’s opacity.
 [^139]: [](#ftnt_ref139) Bernard Cerquiglini, though, praises the computer’s ability to use this sort of complex *fenêtrage* to better visualize texts, answering long held editorial needs: “L’écran qu’élaborent et raffinent toujours plus les techniciens est à la fois dialogique (il offre une interaction constante du consultant et de la machine) et multidimensionnel (il permet la consultation conjointe, par fenêtrage, de données appartenant à des ensembles disjoints). Utilisant ces deux propriétés, on peut concevoir un type d’édition d’une œuvre médiévale, issue de cette réunion d’ensembles disjoints qu’est le codex, qui ne serait plus soumise à la structure bidimensionnelle et close de la page imprimée… Il est certain que l’on peut faire beaucoup mieux que les éditions en colonnes parallèles que nous avons citées, qui démultiplient un livre. Car c’est à la démultiplication des espaces textuels que procède l’informatique: en chacune des ‘fenêtres’ de l’écran apparaît une inscription conservée en mémoire; et cette inscription se dispose, se déplace, acquiert visibilité et privilège (rapprochements, effets de zoom, etc.). L’ordinateur, en tant qu’il est l’articulation d’une mémoire immense, de sa gestion instantanée et de sa visualisation multiple, répond aux besoins éditoriaux que nous avons relevés” (113).
